# ftxui-starter

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json  post-create.sh
examples/: main.cpp
